        2.6.18-53.EL5 (RHEL 5).
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.9-42.0.10.EL (RHEL 4),
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.2-cfs5
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : enhancement
Bugzilla   : 14388
Description: Update to SLES10 SP1 latest kernel-2.6.16.54-0.2.3.

Severity   : enhancement
Bugzilla   : 14289
Description: Update to RHEL5 Update-1 kernel 2.6.18-53.el5.

Severity   : major
Bugzilla   : 14260
Frequency  : rare, at shutdown
Description: access already free / zero obd_namespace.
Details    : if client_disconnect_export was called without force flag set,
             and exist connect request in flight, this can produce access to
	     NULL pointer (or already free pointer) when connect_interpret 
	     store ocd flags in obd_namespace.

Severity   : minor
Bugzilla   : 14418
Frequency  : only at startup
Description: not alloc memory with spinlock held.
Details    : allocation memory with GFP_KERNEL can produce sleep deadlock,
             if any spinlock held.

Severity   : enhancement
Bugzilla   : 12211
Description: make lustre randomly fail allocating memory
Details    : Make lustre randomly failed allocating memory for testing purpose.

Severity   : enhancement
Bugzilla   : 12702
Description: lost problems with lov objid file
Details    : Fixes some scability and access to not inited memory problems 
             in work with lov objdid file.

Severity   : major
Frequency  : always
Bugzilla   : 14270
Description: lfs find does not continue on file error
Details    : Continue other files processing when a file/dir is absent.

Severity   : normal
Bugzilla   : 11791
Description: Inconsistent usage of lustre_pack_reply()
Details    : Standardize the usage of lustre_pack_reply() such that it